--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,11 @@
-@import './common.scss';
-@import './navbar.scss';
-@import './sidebar.scss';
-@import './hero.scss';
-@import './about.scss';
-@import './skills.scss';
-@import './projects.scss';
-@import './contact.scss';
+@import "./common.scss";
+@import "./navbar.scss";
+@import "./sidebar.scss";
+@import "./hero.scss";
+@import "./about.scss";
+@import "./experience.scss";
+@import "./education.scss";
+@import "./skills.scss";
+@import "./projects.scss";
+@import "./contact.scss";
+@import "./footer.scss";
