--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,92 +1,95 @@
 .Nav {
-    background: #000;
-    height: 80px;
+  background: #03102d;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+
+  @media screen and (min-width: 960px) {
+    transition: all 0.8s ease;
+  }
+
+  .NavbarContainer {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    z-index: 10;
+    justify-content: space-between;
+    height: 80px;
+    z-index: 1;
+    width: 100%;
+    padding: 0 24px;
+    max-width: 1200px;
 
-    @media screen and (min-width: 960px) {
-        transition: all 0.8s ease;
-    } 
+    .NavLogo {
+      color: #fff;
+      justify-self: flex-start;
+      cursor: pointer;
+      font-size: 1.5rem;
+      display: flex;
+      align-items: center;
+      margin-left: 24px;
+      font-weight: bold;
+      text-decoration: none;
 
-    .NavbarContainer {
-        display: flex;
-        justify-content: space-between;
+      img {
         height: 80px;
-        z-index: 1;
-        width: 100%;
-        padding: 0 24px;
-        max-width: 1200px;
-
-        .NavLogo {
-            color: #fff;
-            justify-self: flex-start;
-            cursor: pointer;
-            font-size: 1.5rem;
-            display: flex;
-            align-items: center;
-            margin-left: 24px;
-            font-weight: bold;
-            text-decoration: none;
-
-            img {
-                height: 80px;
-            }
-        }
-
-        .MobileIcon {
-            display: none;
-
-            @media screen and (max-width: 768px) {
-                display: block;
-                postion: absolute;
-                top: 0;
-                right: 0;
-                transform: translate(-100%, 40%);
-                font-size: 1.8rem;
-                cursor: pointer;
-                color: #fff;
-            }
-        }
-
-        .NavMenu {
-            display: flex;
-            align-items: center;
-            list-style: none;
-            text-align: center;
-            margin-right: -22px;
-
-            @media screen and (max-width: 768px) {
-                display: none;
-            }
-
-            .NavItem {
-                height: 80px;
-                margin-left: 15px;
-
-                .NavLink {
-                    color: #fff;
-                    display: flex;
-                    align-items: center;
-                    text-decoration: none;
-                    padding: 0 1rem;
-                    height: 100%;
-                    cursor: pointer;
-                    transition: 0.2s ease-in-out;
-                
-                    &.active {
-                        border-bottom: 3px solid #64E9EE;
-                    }
-                
-                    &:hover {
-                        color: #64E9EE;
-                    }                
-                }
-            }
-        }
+      }
     }
+
+    .MobileIcon {
+      display: none;
+
+      @media screen and (max-width: 768px) {
+        display: block;
+        postion: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(-100%, 40%);
+        font-size: 1.8rem;
+        cursor: pointer;
+        color: #fff;
+      }
+    }
+
+    .NavMenu {
+      display: flex;
+      align-items: flex-end;
+      justify-content: flex-end;
+      list-style: none;
+      text-align: right;
+      margin-right: -22px;
+      width: 80%;
+      font-size: 1rem;
+
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+
+      .NavItem {
+        height: 80px;
+        margin-left: 15px;
+
+        .NavLink {
+          color: #fff;
+          display: flex;
+          align-items: center;
+          text-decoration: none;
+          padding: 0 1rem;
+          height: 100%;
+          cursor: pointer;
+          transition: 0s ease-in-out;
+
+          &.active {
+            color: #54859f;
+          }
+
+          &:hover {
+            color: #54859f;
+          }
+        }
+      }
+    }
+  }
 }
