--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,157 +1,35 @@
 .ProjectsContainer {
-    width: 100vw;
-    height: calc(100vh - 80px);
-    background: #F5F5F5;
+  background: rgb(255, 255, 255);
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(203, 203, 203, 1) 30%
+  );
+  box-shadow: inset 0 4px 2px -2px gray;
+  width: 100%;
+  height: calc(100vh - 80px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+
+  .ProjectsTitle {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
-    position: relative;
+    font-size: 14px;
+    padding: 40px 0 40px 0;
+    width: 100vw;
+    border-bottom: 1px solid #54859f;
+    line-height: 1.8;
 
-    .ProjectsHeader {
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-        padding: 80px 150px 0 0;
-        z-index: 5;
-
-        @media screen and (max-width: 540px) {
-            padding: 30px 20px 0 0;
-        }
-
-        @media screen and (max-height: 600px) {
-            padding: 30px 100px 0 0;
-        }
-
-        .ProjectsBtn {
-            align-self: right;
-            padding: 15px 30px;
-            background: transparent;
-            color: #fff;
-            text-decoration: none;
-            font-size: 1.2rem;
-            font-weight: bold;
-            border: 1px solid #fff;
-            border-radius: 10px;
-            transition: 0.2s ease-in-out;
-        
-            &:hover {
-                background: #fff;
-                color: #000;
-                border: 1px solid transparent;
-            } 
-
-            @media screen and (max-width: 414px) {
-                padding: 10px 20px;
-                font-size: 1.1rem;
-            }
-            
-            @media screen and (max-height: 600px) {
-                padding: 10px 20px;
-                font-size: 1.1rem;
-            }
-        }
+    h4 {
+      font-weight: 300;
+      font-size: 1.2em;
     }
 
-    .ProjectsHero {
-        z-index: 5;
-        height: 100%;
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 60px;
-        color: #fff;
-        padding: 80px;
-
-        @media screen and (max-width: 414px) {
-            padding: 40px;
-            grid-gap: 40px;
-            grid-template-columns: 1fr 1fr;
-        }
-
-        @media screen and (max-height: 600px) {
-            padding: 40px;
-            grid-gap: 40px;
-        }
-
-        .Project {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-        }
-
-
-        .ProjectImg {
-            width: 100%;
-            opacity: 70%;
-
-            @media screen and (max-width: 414px) {
-                height: 60%;
-            }
-        }
-
-        .ProjectDescription {
-            font-size: 1em;
-            text-align: center;
-            margin-top: 15px;
-            margin-bottom: 15px;
-
-            @media screen and (max-width: 414px) {
-                font-size: .8em;
-            }
-
-            @media screen and (max-height: 600px) {
-                font-size: .9em;
-            }
-        }
-
-        a {
-            font-size: 1.2em;
-            text-decoration: none;
-            color: #64E9EE;
-            margin-top: 5px;
-            transition: 0.3s ease-in-out;
-
-            &:hover {
-                cursor: pointer;
-                color: #fff;
-            }
-
-            @media screen and (max-width: 414px) {
-                font-size: .9em;
-            }
-
-            @media screen and (max-height: 600px) {
-                font-size: 1em;
-            }
-        }
+    p {
+      font-weight: 300;
     }
-}
-
-@keyframes move-twink-back {
-    from {background-position:0 0;}
-    to {background-position:-10000px 5000px;}
-}
-
-.stars, .twinkling {
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  width:100%;
-  height:100%;
-  display:block;
-}
-
-.stars {
-  background:#000 url('../components/images/stars.png') repeat top center;
-  z-index:0;
-}
-
-.twinkling{
-  background:transparent url('../components/images/twinkling.png') repeat top center;
-  z-index:1;
-  animation:move-twink-back 200s linear infinite;
+  }
 }
