--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -1,127 +1,61 @@
 .SkillsContainer {
-    width: 100vw;
-    height: calc(100vh - 80px);
-    background: #000;
+  background: #03102d url("../components/images/dark-paths.png") no-repeat fixed
+    center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  color: #fff;
+  overflow: hidden;
+
+  .SkillsTitle {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    overflow-x: hidden;
-    position: relative;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.15);
+    padding: 30px;
 
-    .SkillsTitlesWrapper{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        text-align: center;
-        width: 80vw;
-        grid-gap: 50px; 
-        z-index: 5;
-
-        @media screen and (max-width: 540px) {
-            width: 90vw;
-        }
-        
-        .SkillsTitle {
-            color: #fff;
-            font-weight: 700;
-            text-transform: uppercase;
-            padding-bottom: 60px;
-
-            @media screen and (max-width: 540px) {
-                padding-bottom: 40px;
-                font-size: 1.5em;
-            }
-
-            @media screen and (max-width: 414px) {
-                font-size: 1.3em;
-            }
-
-            @media screen and (max-width: 414px) {
-                font-size: 1em;
-            }
-
-            @media screen and (max-height: 600px) {
-                padding-bottom: 40px;
-                font-size: 1.5em;
-            }
-        }
+    h5 {
+      font-size: 20px;
+      font-weight: 400;
     }
+  }
 
-    .SkillsHero {
-        width: 80vw;
-        height: calc(100% - 160px);
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 50px;
-        height: 40%;
-        z-index: 5;
+  ul {
+    list-style-type: none;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-        @media screen and (max-width: 540px) {
-            width: 90vw;
-        }
+  .SkillsHero {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    padding: 20px 150px 230px 150px;
 
-        @media screen and (max-width: 414px) {
-           grid-gap: 20px; 
-        }
+    .SkillsCol {
+      height: 100%;
+      width: 100%;
+      display: grid;
+      grid-template-rows: repeat(5, 1fr);
 
-        @media screen and (max-width: 375px) {
-            grid-gap: 10px;
-        }
-        
-        .SkillsCol {
-            list-style: none;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            align-items: center;   
-
-            .Skill {
-                font-size: 1.5rem;
-                margin-top: 30px;
-                font-weight: 700;
-                background: -webkit-linear-gradient(-45deg, #65e9ee 0%, #65e9ee 25%, #f2f2f2 50%, #65e9ee 75%, #65e9ee 100%) -31% 0;
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-
-                @media screen and (max-width: 540px) {
-                    font-size: 1.3rem;
-                }
-
-                @media screen and (max-width: 414px) {
-                    font-size: 1.1em;
-                }
-                
-                @media screen and (max-height: 600px) {
-                    font-size: 1.3rem;
-                }
-            }
-        }
+      .Skill {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 60px;
+        width: 303px;
+        background-color: rgba(255, 255, 255, 0.15);
+        font-size: 14px;
+      }
     }
-}
-
-@keyframes move-twink-back {
-    from {background-position:0 0;}
-    to {background-position:-10000px 5000px;}
-}
-
-.stars, .twinkling {
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  width:100%;
-  height:100%;
-  display:block;
-}
-
-.stars {
-  background:#000 url('../components/images/stars.png') repeat top center;
-  z-index:0;
-}
-
-.twinkling{
-  background:transparent url('../components/images/twinkling.png') repeat top center;
-  z-index:1;
-  animation:move-twink-back 200s linear infinite;
+  }
 }
