--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -15,6 +15,10 @@
   position: relative;
   box-shadow: inset 0 4px 2px -2px gray;
 
+  @media screen and (max-width: 1024px) {
+    transition: all 0.8s ease;
+  }
+
   .AboutHero {
     display: flex;
     justify-content: center;
@@ -27,6 +31,10 @@
       align-items: center;
       text-align: center;
       justify-self: center;
+
+      @media screen and (max-width: 820px) {
+        width: 75%;
+      }
 
       h2 {
         margin-bottom: 4%;
