--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -8,6 +8,10 @@
   overflow: hidden;
   box-shadow: inset 0 4px 2px -2px gray;
 
+  @media screen and (max-width: 1024px) {
+    transition: all 0.8s ease;
+  }
+
   .TitleWrapper {
     font-size: 20px;
     padding: 20px 0 20px 0;
@@ -66,6 +70,22 @@
         .JobDescription {
           padding: 0 300px 0 40px;
           line-height: 1.8;
+
+          @media screen and (max-width: 1024px) {
+            font-size: 10px;
+          }
+
+          @media screen and (max-width: 820px) {
+            padding: 0 100px 0 40px;
+          }
+
+          @media screen and (max-width: 450px) {
+            padding: 0 180px 0 40px;
+          }
+
+          @media screen and (max-width: 375px) {
+            padding: 0 200px 0 40px;
+          }
         }
       }
     }
