--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -14,6 +14,10 @@
   z-index: 1;
   background-position: fixed;
 
+  @media screen and (max-width: 1024px) {
+    transition: all 0.8s ease;
+  }
+
   &:before {
     content: "";
     position: absolute;
@@ -37,7 +41,12 @@
     z-index: 3;
     position: absolute;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
+
+    @media screen and (max-width: 1024px) {
+      grid-template-columns: 1fr;
+      gap: 10px;
+    }
 
     .HeroLeft {
       width: 100%;
@@ -58,6 +67,10 @@
       flex-direction: column;
       justify-content: center;
       margin-left: 20%;
+
+      @media screen and (max-width: 450px) {
+        margin-left: 10px;
+      }
 
       .HeroTitle {
         margin-bottom: 10%;
