--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -9,7 +9,7 @@
   top: 0;
   z-index: 10;
 
-  @media screen and (min-width: 960px) {
+  @media screen and (max-width: 1024px) {
     transition: all 0.8s ease;
   }
 
@@ -41,9 +41,9 @@
     .MobileIcon {
       display: none;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 820px) {
         display: block;
-        postion: absolute;
+        position: absolute;
         top: 0;
         right: 0;
         transform: translate(-100%, 40%);
@@ -63,7 +63,7 @@
       width: 80%;
       font-size: 1rem;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 820px) {
         display: none;
       }
 
