--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -10,6 +10,10 @@
   color: #fff;
   overflow: hidden;
 
+  @media screen and (max-width: 1024px) {
+    transition: all 0.8s ease;
+  }
+
   .SkillsTitle {
     display: flex;
     justify-content: center;
@@ -41,6 +45,22 @@
     height: 100%;
     padding: 20px 150px 230px 150px;
 
+    @media screen and (max-width: 1024px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media screen and (max-width: 820px) {
+      padding: 20px 150px 230px 100px;
+    }
+
+    @media screen and (max-width: 450px) {
+      grid-template-columns: 1fr;
+    }
+
+    @media screen and (max-width: 390px) {
+      padding: 20px 150px 230px 80px;
+    }
+
     .SkillsCol {
       height: 100%;
       width: 100%;
@@ -55,6 +75,22 @@
         width: 303px;
         background-color: rgba(255, 255, 255, 0.15);
         font-size: 14px;
+
+        @media screen and (max-width: 820px) {
+          width: 260px;
+        }
+
+        @media screen and (max-width: 768px) {
+          width: 245px;
+        }
+
+        @media screen and (max-width: 450px) {
+          height: 40px;
+        }
+
+        @media screen and (max-width: 390px) {
+          height: 35px;
+        }
       }
     }
   }
